REF: fixes z-index bug for bs modals

--- a/goobi-viewer-theme-reference/WebContent/resources/themes/reference/css/dev/reference.css
+++ b/goobi-viewer-theme-reference/WebContent/resources/themes/reference/css/dev/reference.css
@@ -643,6 +643,9 @@ table,
 /* TABS */
 /* FORMS */
 /* MODALS */
+.modal {
+  z-index: 9999;
+}
 /* BREAKPOINT FOR LARGE DESKTOPS */
 /* BREAKPOINT FOR DESKTOPS */
 /* BREAKPOINT FOR TABLETS */
