--- a/goobi-viewer-theme-reference/WebContent/resources/themes/reference/css/less/resets.less
+++ b/goobi-viewer-theme-reference/WebContent/resources/themes/reference/css/less/resets.less
@@ -27,6 +27,7 @@
 }
 /* MODALS */
 .modal {
+	z-index: 9999;
     .modal-dialog {
         .modal-content {
             .modal-header {
